# r18

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: args.rs  main.rs
example/: Cargo.toml
example/src/: main.rs
example/tr/: config.json  zh-CN.json  zh-TW.json  zh_CN.json
proc-macros/: Cargo.toml  build.rs
proc-macros/src/: lib.rs
src/: lib.rs  macros.rs
trans-support/: Cargo.toml
trans-support/src/: lib.rs
trans-support/src/source/: extractor.rs
trans-support/src/translation/: extractor.rs  generator.rs  mod.rs
