[package]
name = "r18"
version = "0.1.0"
edition = "2021"
description = "A simply I18n crate for Rust."
license = "MIT"
repository = "https://github.com/Limit-IM/r18"
keywords = ["i18n", "l10n", "internationalization"]
categories = ["localization", "internationalization"]
readme = "README.md"
authors = [
    "ho229v3666@gmail.com",
]
exclude = [".github", "example"]

[dependencies]
mod_use = "0.2"
once_cell = "1.16"
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
sys-locale = "0.2"

r18-proc-macros = { path = "./proc-macros", version = "0.1" }

[workspace]
members = [
    "example",
    "proc-macros",
    "trans-support"
]
