[package]
name = "r18"
version = "0.4.3"
edition = "2021"
description = "A simply I18n crate for Rust."
license = "MIT"
repository = "https://github.com/Limit-LAB/r18"
keywords = ["i18n", "l10n", "internationalization"]
categories = ["localization", "internationalization"]
readme = "README.md"
authors = [
    "ho229v3666@gmail.com",
]
exclude = [".github", "cli", "example", "proc-macros", "trans-support"]

[dependencies]
mod_use = "0.2"
sys-locale = "0.3.1"
oxilangtag = "0.1"
phf = { version = "0.11.2", features = ["macros"] }
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }

r18-proc-macros = { path = "./proc-macros", version = "0.4.2" }

[workspace]
members = [
    "cli",
    "example",
    "proc-macros",
    "trans-support"
]
