[package]
name = "cargo-r18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_use = "0.2.1"
walkdir = "2.3"
r18-trans-support = { path = "../trans-support", version = "0.2" }
clap = { version = "4.0", features = ["derive", "cargo"] }
oxilangtag = "0.1"
