[package]
name = "cargo-r18"
version = "0.2.1"
edition = "2021"
description = "A CLI tool for crate r18"
license = "MIT"
repository = "https://github.com/Limit-IM/r18"
keywords = ["i18n", "l10n", "internationalization"]
categories = ["localization", "internationalization"]
readme = "../README.md"
authors = [
    "ho229v3666@gmail.com",
]

[dependencies]
mod_use = "0.2.1"
walkdir = "2.3"
r18-trans-support = { path = "../trans-support", version = "0.4.0" }
clap = { version = "4.2.1", features = ["derive", "cargo"] }
oxilangtag = "0.1"
