[package]
name = "r18-proc-macros"
version = "0.1.0"
edition = "2021"
description = "r18 procedure macros"
license = "MIT"
repository = "https://github.com/Limit-IM/r18"
readme = "../README.md"
authors = [
    "ho229v3666@gmail.com",
]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

glob = "0.3"
oxilangtag = "0.1"
serde = "1.0"
serde_json = "1.0"

[lib]
proc-macro = true
