[package]
name = "r18-proc-macros"
version = "0.2.2"
edition = "2021"
description = "r18 procedure macros"
license = "MIT"
repository = "https://github.com/Limit-IM/r18"
readme = "../README.md"
authors = [
    "ho229v3666@gmail.com",
]

[dependencies]
r18-trans-support = { path = "../trans-support", version = "0.2"}

proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

glob = "0.3"
oxilangtag = "0.1"

[lib]
proc-macro = true
