[package]
name = "r18-trans-support"
version = "0.3.0"
edition = "2021"
description = "r18 translation support"
license = "MIT"
repository = "https://github.com/Limit-IM/r18"
readme = "../README.md"
authors = [
    "ho229v3666@gmail.com",
]

[dependencies]
mod_use = "0.2.1"

serde = "1.0"
serde_json = "1.0"

proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1.0", features = ["full"] }
